# BurgerDoom

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
docs/: icon_mac.icns
source/: CMakeLists.txt
source/Audio/: AudioLoader.cpp  AudioOutputDevice.cpp
source/Base/: ControllerInput.cpp  FatalErrors.cpp  IniUtils.h  Input.cpp
source/GFX/: Renderer_WeaponDraw.cpp  Video.cpp
source/Game/: Cheats.cpp  Config.cpp  Config.h  DoomDefines.h  DoomMain.cpp  Prefs.cpp
source/Map/: Doors.cpp  Floor.cpp  MapData.cpp  Platforms.cpp
source/Things/: Enemy.cpp  Info.cpp  PlayerSprites.cpp
source/UI/: WipeFx.cpp
